# cpu-bench

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: bench.yml  deploy.yml
bench/: bench.cpp
site/: app.js  diag.html  diag.js  index.html  index_external.html  styles.css
site/scripts/: main.js  simd-probe.js  util.js  worker.js  workloads.js
